Fix text overlap on mobile screen

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -254,6 +254,7 @@ ul.topics {
 
 li.topic {
     margin-right: 24px;
+    min-width: 290px;
     padding-bottom: 48px;
     width: calc(50% - 24px);
 }
